23 August 2007

* Yet another fetch reorganisation to try to make it clearer. Move tracking
  completed mail into fetch code, move mail and state stuff outside, and
  simplify the API and data structures. Also change the way the fetch poll loop
  works and fix some potential problems with IMAP-over-pipe. Hopefully few
  regressions...

18 August 2007

* Tidy up io code a little, break some big functions and split headers stuff
  into dedicated io.h. Also lift fd limit.
* Make SMTP delivery work again (blank lines were failing a length check in
  buffer_add from io_write). SF bug 1776786.

16 August 2007

* Remove header action now allows fnmatch patterns.
* Fix a silly bug with removing headers.
* Clarify headers/body again. The body offset is now the first byte of the
  body, so a mail of a single blank line has size == body == 1 (so, body
  size == 0 rather than 1). "\nBody" always had body == 1 and not having
  "\n" the same was confusing me.

15 August 2007

* A few POP3 servers supply an APOP cookie and then refuse the APOP command.
  Handle them with a "no-apop" flag to POP3 account statements to disable
  APOP. Reported by Frank Terbeck.

10 August 2007

* Combine append into write and exec into pipe even more to get rid of
  deliver-append.c and deliver-exec.c.
* add-from on stdout delivery is gone, an acceptable from line can be prepended
  using rewrite.

06 August 2007

* TDB is now a mandatory dependency.

03 August 2007

* Fetching from mboxes.

02 August 2007

* Handle IMAP mails properly if they have no trailing newline.
* Use APOP for POP3 or CRAM-MD5 for IMAP if offered by server. Note that fdm
  currently does NOT fall back to plaintext auth if the server offers APOP
  or CRAM-MD5 but it doesn't work.

01 August 2007

* fdm 1.3c released.
* Wrong size for match buffer in pcre.c. SF.net bug 1765524.
* Try to buffer as much as possible when reading, this prevents problems since
  SSL_read seems to buffer data itself which poll can't know about.