@@ -1,4 +1,4 @@
-/* $Id: imap-common.c,v 1.57 2007-08-23 23:05:09 nicm Exp $ */
+/* $Id: imap-common.c,v 1.58 2007-08-24 09:46:08 nicm Exp $ */
 
 /*
  * Copyright (c) 2006 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -714,7 +714,7 @@ imap_state_line(struct account *a, struct fetch_ctx *fctx)
 			return (FETCH_ERROR);
 		if (line == NULL)
 			return (FETCH_BLOCK);
-		
+
 		if (data->flushing)
 			continue;
 
@@ -723,7 +723,7 @@ imap_state_line(struct account *a, struct fetch_ctx *fctx)
 		size = strlen(line);
 		if (used + size + 2 > data->size)
 			break;
-		
+
 		if (append_line(m, line, size) != 0) {
 			log_warn("%s: failed to resize mail", a->name);
 			return (FETCH_ERROR);
@@ -740,15 +740,15 @@ imap_state_line(struct account *a, struct fetch_ctx *fctx)
 		return (imap_invalid(a, line));
 	if (line[left] != ')' || line[left + 1] != '\0')
 		return (imap_invalid(a, line));
-	
+
 	/* If there was data left, add it as a new line without trailing \n. */
 	if (left > 0) {
 		if (append_line(m, line, left) != 0) {
 			log_warn("%s: failed to resize mail", a->name);
 			return (FETCH_ERROR);
-		}	
+		}
 		data->lines++;
-		
+
 		/* Wipe out the trailing \n. */
 		m->size--;
 	}
